--- a/Sample.ipynb
+++ b/Sample.ipynb
@@ -188,6 +188,54 @@
      "start_time": "2023-12-04T19:44:19.476333Z"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Task 5: Find the undercover agent"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "There is an undercover agent that we are trying to find. We have these descriptions about the agent:\n",
+    "- The agent's name is 6 characters long\n",
+    "- The agent is older than 30\n",
+    "- The agent has brown eyes\n",
+    "- The agent's favorite color is not brown\n",
+    "- Their name starts with \"S\""
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "      name  age eye_color favorite_color\n94  Samuel   40     brown         orange",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>name</th>\n      <th>age</th>\n      <th>eye_color</th>\n      <th>favorite_color</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>94</th>\n      <td>Samuel</td>\n      <td>40</td>\n      <td>brown</td>\n      <td>orange</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd[(pd['name'].apply(len) == 6) & (pd['age'] >= 30) & (pd['eye_color'] == 'brown') & (pd['favorite_color'] != 'brown') & (pd['name'].str.startswith('S'))]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-12-04T19:52:35.100957Z",
+     "start_time": "2023-12-04T19:52:35.086358Z"
+    }
+   }
   }
  ],
  "metadata": {
